k8s/api_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
spec:
  selector:
    matchLabels:
      app: users-api
  replicas: 2
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - name: users-api
        image: ryhoward/api:37
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: users-api
